--- a/Src/Clide/Properties/Resources.resx
+++ b/Src/Clide/Properties/Resources.resx
@@ -144,8 +144,8 @@
   <data name="Host_FailedToInitialize" xml:space="preserve">
     <value>Failed to initialize host.</value>
   </data>
-  <data name="Host_MissingGuidAttribute" xml:space="preserve">
-    <value>Hosting package '{0}' does not have the required [Guid] attribute.</value>
+  <data name="General_MissingGuidAttribute" xml:space="preserve">
+    <value>Hosting package '{packageType}' does not have the required [Guid] attribute.</value>
   </data>
   <data name="OptionsManager_FailedToRegisterPage" xml:space="preserve">
     <value>Failed to register page '{pageType}'.</value>
