--- a/src/Clide.Interfaces/Properties/Resources.resx
+++ b/src/Clide.Interfaces/Properties/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="ISolutionExplorerNodeExtensions_NotAncestor" xml:space="preserve">
-    <value>Node '{ancestor}' is not an ancestor of '{descendent}'.</value>
+    <value>Node '{0}' is not an ancestor of '{1}'.</value>
   </data>
   <data name="ServiceLocator_MissingDependency" xml:space="preserve">
     <value>Required dependency '{0}' was not found.</value>
