--- a/src/Clide/Properties/Resources.resx
+++ b/src/Clide/Properties/Resources.resx
@@ -141,11 +141,20 @@
   <data name="ItemProperties_InvalidNullValue" xml:space="preserve">
     <value>Cannot set null value for item property {0}.</value>
   </data>
+  <data name="ProjectItemContainerNode_ItemNotFound" xml:space="preserve">
+    <value>Failed to find {0} in {1}</value>
+  </data>
   <data name="ProjectNode_AddFolderFailed" xml:space="preserve">
     <value>Failed to add folder {0} to {1}.</value>
   </data>
   <data name="ProjectNode_AddFolderNotSupported" xml:space="preserve">
     <value>Creating project folders is not supported by project {0}. Failed to create folder {1}.</value>
+  </data>
+  <data name="ProjectNode_AddProjectReferenceFailed" xml:space="preserve">
+    <value>Failed to add project reference {0} to {1}.</value>
+  </data>
+  <data name="ProjectNode_AddProjectReferenceNotSupported" xml:space="preserve">
+    <value>Adding project reference is not supported by project {0}.</value>
   </data>
   <data name="ServiceLocator_MissingDependency" xml:space="preserve">
     <value>Required dependency '{0}' was not found.</value>
