--- a/src/Clide/Properties/Resources.resx
+++ b/src/Clide/Properties/Resources.resx
@@ -204,4 +204,28 @@
   <data name="OutputWindowManager_TraceInitializing" xml:space="preserve">
     <value>Initializing trace output pane '{0}'.</value>
   </data>
+  <data name="SettingsManager_CannotSaveAsString" xml:space="preserve">
+    <value>Cannot persist setting value of type '{0}' from property '{1}.{2}'. An appropriate type converter that can convert the value to a string is required.</value>
+  </data>
+  <data name="SettingsManager_FailedToRead" xml:space="preserve">
+    <value>Failed to read settings class '{0}' from the settings store.</value>
+  </data>
+  <data name="SettingsManager_InvalidValue" xml:space="preserve">
+    <value>Cannot assign value of type '{0}' to property '{1}.{2}' of type '{4}'. An appropriate type converter is required.</value>
+  </data>
+  <data name="Settings_AlreadyInitialized" xml:space="preserve">
+    <value>Object has already been initialized.</value>
+  </data>
+  <data name="Settings_EndEditWithoutBeginEdit" xml:space="preserve">
+    <value>EndEdit invoked without corresponding BeginEdit.</value>
+  </data>
+  <data name="Settings_EndInitWithoutBeginInit" xml:space="preserve">
+    <value>EndInit invoked without corresponding BeginInit.</value>
+  </data>
+  <data name="Settings_FailedToRestore" xml:space="preserve">
+    <value>Failed to restore original state when editing was cancelled.</value>
+  </data>
+  <data name="Settings_TraceSaved" xml:space="preserve">
+    <value>Settings successfully saved.</value>
+  </data>
 </root>
