--- a/src/Clide.Interfaces/Properties/Resources.resx
+++ b/src/Clide.Interfaces/Properties/Resources.resx
@@ -129,4 +129,19 @@
   <data name="IServiceProviderExtensions_MissingGuidAttribute" xml:space="preserve">
     <value>Specified package type '{0}' does not have the required [Guid] attribute.</value>
   </data>
+  <data name="Settings_AlreadyInitialized" xml:space="preserve">
+    <value>Object has already been initialized.</value>
+  </data>
+  <data name="Settings_EndEditWithoutBeginEdit" xml:space="preserve">
+    <value>EndEdit invoked without corresponding BeginEdit.</value>
+  </data>
+  <data name="Settings_EndInitWithoutBeginInit" xml:space="preserve">
+    <value>EndInit invoked without corresponding BeginInit.</value>
+  </data>
+  <data name="Settings_FailedToRestore" xml:space="preserve">
+    <value>Failed to restore original state when editing was cancelled.</value>
+  </data>
+  <data name="Settings_TraceSaved" xml:space="preserve">
+    <value>Settings successfully saved.</value>
+  </data>
 </root>
