--- a/src/Clide.Windows/Properties/Resources.resx
+++ b/src/Clide.Windows/Properties/Resources.resx
@@ -117,25 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="ISolutionExplorerNodeExtensions_NotAncestor" xml:space="preserve">
-    <value>Node '{0}' is not an ancestor of '{1}'.</value>
-  </data>
   <data name="General_MissingGuidAttribute" xml:space="preserve">
     <value>Hosting package '{0}' does not have the required [Guid] attribute.</value>
   </data>
-  <data name="Settings_AlreadyInitialized" xml:space="preserve">
-    <value>Object has already been initialized.</value>
+  <data name="IServiceProviderExtensions_MissingGuidAttribute" xml:space="preserve">
+    <value>Specified package type '{0}' does not have the required [Guid] attribute.</value>
   </data>
-  <data name="Settings_EndEditWithoutBeginEdit" xml:space="preserve">
-    <value>EndEdit invoked without corresponding BeginEdit.</value>
-  </data>
-  <data name="Settings_EndInitWithoutBeginInit" xml:space="preserve">
-    <value>EndInit invoked without corresponding BeginInit.</value>
-  </data>
-  <data name="Settings_FailedToRestore" xml:space="preserve">
-    <value>Failed to restore original state when editing was cancelled.</value>
-  </data>
-  <data name="Settings_TraceSaved" xml:space="preserve">
-    <value>Settings successfully saved.</value>
+  <data name="ServiceLocator_MissingDependency" xml:space="preserve">
+    <value>Required dependency '{0}' was not found.</value>
   </data>
 </root>
