--- a/src/Clide.Interfaces/Properties/Resources.resx
+++ b/src/Clide.Interfaces/Properties/Resources.resx
@@ -138,4 +138,7 @@
   <data name="Settings_TraceSaved" xml:space="preserve">
     <value>Settings successfully saved.</value>
   </data>
+  <data name="IServiceServiceExtensions_MissingDependency" xml:space="preserve">
+    <value>Required dependency '{0}' was not found.</value>
+  </data>
 </root>
